@@ -23,6 +23,10 @@ SoftHSM trunk
 * Limit the scope of the session objects to the owner application
 * softhsm --optimize will clean up leftovers (session objects)
   from applications that haven't closed down properly.
+* Do not use CKF_HW, the mechanisms are not performed by a device.
+* The ulMinKeySize and ulMaxKeySize are not used for the digesting
+  mechanisms, but we set them to zero for applications that forget
+  this.
 
 
 SoftHSM 1.1.4 - 2010-04-06
